--- a/pages/19730.html
+++ b/pages/19730.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      rational 2d conformal field theory in nLab
+      minimal model CFT in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      rational 2d conformal field theory
+      minimal model CFT
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9064/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -311,11 +311,15 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
 <body>
+<blockquote>
+<p>This entry is about the concept in <a class="existingWikiWord" href="/nlab/show/conformal+field+theory">conformal field theory</a>. For the conceopt of <em><a class="existingWikiWord" href="/nlab/show/minimal+models">minimal models</a></em> in <a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a> see at <em><a class="existingWikiWord" href="/nlab/show/minimal+fibration">minimal fibration</a></em>.</p>
+</blockquote>
+<hr />
 <div class="rightHandSide">
 <div class="toc clickDown" tabindex="0">
 <h3 id="context">Context</h3>
 
-<h4 id="algebraic_quantum_field_theory">Algebraic Quantum Field Theory</h4>
+<h4 id="quantum_field_theory">Quantum Field Theory</h4>
 
 <div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p><p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p><h2 id="concepts">Concepts</h2><p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>: <a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical</a>, <a class="existingWikiWord" href="/nlab/show/prequantum+field+theory">pre-quantum</a>, <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum</a></p><p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p><ul>
 <li>
@@ -754,132 +758,6 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/main+theorem+of+perturbative+renormalization">main theorem of perturbative renormalization</a></p>
 </li>
 </ul></div>
-
-<h4 id="functorial_quantum_field_theory">Functorial Quantum field theory</h4>
-
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/FQFT">functorial quantum field theory</a></strong></p><h2 id="contents">Contents</h2><ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/cobordism+category">cobordism category</a></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/cobordism">cobordism</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/extended+cobordism">extended cobordism</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2Cn%29-category+of+cobordisms">(∞,n)-category of cobordisms</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/bordism+categories+following+Stolz-Teichner">Riemannian bordism category</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/cobordism+hypothesis">cobordism hypothesis</a></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/generalized+tangle+hypothesis">generalized tangle hypothesis</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/On+the+Classification+of+Topological+Field+Theories">classification of TQFTs</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/FQFT">FQFT</a></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/extended+topological+quantum+field+theory">extended TQFT</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/conformal+field+theory">CFT</a></p>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/vertex+operator+algebra">vertex operator algebra</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/TQFT">TQFT</a></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Reshetikhin%3FTuraev+model">Reshetikhin?Turaev model</a> / <a class="existingWikiWord" href="/nlab/show/Chern-Simons+theory">Chern-Simons theory</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/HQFT">HQFT</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/TCFT">TCFT</a></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/A-model">A-model</a>, <a class="existingWikiWord" href="/nlab/show/B-model">B-model</a>, <a class="existingWikiWord" href="/nlab/show/Gromov-Witten+theory">Gromov-Witten theory</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/homological+mirror+symmetry">homological mirror symmetry</a></p>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-
-<li>
-<p>FQFT and <a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/%281%2C1%29-dimensional+Euclidean+field+theories+and+K-theory">(1,1)-dimensional Euclidean field theories and K-theory</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/%282%2C1%29-dimensional+Euclidean+field+theory">(2,1)-dimensional Euclidean field theory</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/geometric+models+for+tmf">geometric models for tmf</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/holographic+principle+of+higher+category+theory">holographic principle of higher category theory</a></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/holographic+principle">holographic principle</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/AdS%2FCFT+correspondence">AdS/CFT correspondence</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/quantization+via+the+A-model">quantization via the A-model</a></p>
-</li>
-</ul>
-</li>
-</ul><div>
-<p>
-  <a href="/nlab/edit/functorial+quantum+field+theory+-+contents">Edit this sidebar</a>
-</p>
-</div></div>
 </div>
 </div>
 
@@ -887,11 +765,6 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
-<li><a href='#properties'>Properties</a></li>
-<ul>
-<li><a href='#classification'>Classification</a></li>
-</ul>
-<li><a href='#examples'>Examples</a></li>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
@@ -899,48 +772,26 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p><em>Rational 2d conformal field theories</em> are that class of relatively simple <a class="existingWikiWord" href="/nlab/show/2d+CFTs">2d CFTs</a>, such as the <a class="existingWikiWord" href="/nlab/show/WZW+model">WZW model</a>, which are characterized by the fact that their spaces of <a class="existingWikiWord" href="/nlab/show/conformal+blocks">conformal blocks</a> are <a class="existingWikiWord" href="/nlab/show/finite+dimensional+vector+spaces">finite dimensional vector spaces</a>. Locally such 2d CFTs are given by a <a class="existingWikiWord" href="/nlab/show/rational+vertex+operator+algebra">rational vertex operator algebra</a>.</p>
-
-<p>Interpreted as <a class="existingWikiWord" href="/nlab/show/sigma-models">sigma-models</a> as in <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a>, rational <a class="existingWikiWord" href="/nlab/show/2d+CFTs">2d CFTs</a> correspond to <a class="existingWikiWord" href="/nlab/show/target+spaces">target spaces</a> which are <a class="existingWikiWord" href="/nlab/show/compact+topological+spaces">compact</a> (such as <a class="existingWikiWord" href="/nlab/show/fibers">fibers</a> of <a class="existingWikiWord" href="/nlab/show/Kaluza-Klein+compactifications">Kaluza-Klein compactifications</a>, but not <a class="existingWikiWord" href="/nlab/show/Minkowski+spacetime">Minkowski spacetime</a>, for instance). See e.g. <a href="#Schomerus05">Schomerus 05</a> for contrast.</p>
-
-<h2 id="properties">Properties</h2>
-
-<h3 id="classification">Classification</h3>
-
-<p>The <a class="existingWikiWord" href="/nlab/show/FRS-theorem+on+rational+2d+CFT">FRS-theorem on rational 2d CFT</a> provides a complete classification of rational 2d CFT via the <a class="existingWikiWord" href="/nlab/show/CS-WZW+correspondence">CS-WZW correspondence</a> and the <a class="existingWikiWord" href="/nlab/show/Reshetikhin-Turaev+construction">Reshetikhin-Turaev construction</a> of <a class="existingWikiWord" href="/nlab/show/3d+Chern-Simons+theory">3d Chern-Simons theory</a>.</p>
-
-<h2 id="examples">Examples</h2>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/WZW+model">WZW model</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Gepner+model">Gepner model</a></p>
-</li>
-</ul>
+<p>In <a class="existingWikiWord" href="/nlab/show/conformal+field+theory">conformal field theory</a> a <em>minimal model</em> is a <a class="existingWikiWord" href="/nlab/show/2d+CFT">2d CFT</a> or <a class="existingWikiWord" href="/nlab/show/2d+SCFT">2d SCFT</a>, whose field content consists of a <a class="existingWikiWord" href="/nlab/show/finite+number">finite number</a> of <a class="existingWikiWord" href="/nlab/show/irreducible+representations">irreducible representations</a> of the (super-)<a class="existingWikiWord" href="/nlab/show/Virasoro+algebra">Virasoro algebra</a>.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/boundary+CFT">boundary CFT</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Gepner+model">Gepner model</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/minimal+model+CFT">minimal model CFT</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/rational+conformal+field+theory">rational conformal field theory</a></p>
 </li>
 </ul>
 
 <h2 id="references">References</h2>
 
-<p>See the references at <em><a class="existingWikiWord" href="/nlab/show/FRS-theorem+on+rational+2d+CFT">FRS-theorem on rational 2d CFT</a></em>.</p>
-
-<p>The contrast with non-rational CFTs:</p>
+<p>See also</p>
 
 <ul>
-<li id="Schomerus05"><a class="existingWikiWord" href="/nlab/show/Volker+Schomerus">Volker Schomerus</a>, <em>Non-compact String Backgrounds and Non-rational CFT</em>, Phys.Rept.431:39-86, 2006 (<a href="https://arxiv.org/abs/hep-th/0509155">arXiv:hep-th/0509155</a>)</li>
+<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Minimal_models">Minimal models</a></em></li>
 </ul>
 </body></html>
 
@@ -948,22 +799,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 29, 2018 at 04:51:12.
-  See the <a href="https://ncatlab.org/nlab/history/rational 2d conformal field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on September 29, 2018 at 04:49:53.
+  See the <a href="https://ncatlab.org/nlab/history/minimal model CFT" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/rational+2d+conformal+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/rational+2d+conformal+field+theory/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/rational+2d+conformal+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/rational+2d+conformal+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/rational 2d conformal field theory/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/minimal+model+CFT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/minimal model CFT/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/rational+2d+conformal+field+theory" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/minimal+model+CFT" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/rational+2d+conformal+field+theory" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/minimal+model+CFT" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/rational+2d+conformal+field+theory" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/minimal+model+CFT" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
