--- a/pages/11341.html
+++ b/pages/11341.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -696,11 +696,13 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>The <em>Gepner model</em> (<a href="#Gepner87">Gepner 87</a>) is a <a class="existingWikiWord" href="/nlab/show/rational+CFT">rational CFT</a> <a class="existingWikiWord" href="/nlab/show/2d+SCFT">2d SCFT</a> which is “non-geometric” in that it does not arise as a <a class="existingWikiWord" href="/nlab/show/sigma-model">sigma-model</a> with <a class="existingWikiWord" href="/nlab/show/target+space">target space</a> a <a class="existingWikiWord" href="/nlab/show/smooth+manifold">smooth manifold</a>. Indeed the Gepner model appears as the limiting case of sigma-models with <a class="existingWikiWord" href="/nlab/show/target+space">target space</a> a 6d <a class="existingWikiWord" href="/nlab/show/Calabi-Yau+manifold">Calabi-Yau manifold</a> at singular points in the <a class="existingWikiWord" href="/nlab/show/moduli+space">moduli space</a> of the CY target: the <em><a class="existingWikiWord" href="/nlab/show/flop+transition">flop transition</a></em>.</p>
+<p>A <em>Gepner model</em> (<a href="#Gepner87">Gepner 87</a>) is a <a class="existingWikiWord" href="/nlab/show/rational+CFT">rational CFT</a> <a class="existingWikiWord" href="/nlab/show/2d+SCFT">2d SCFT</a> which is a <a class="existingWikiWord" href="/nlab/show/tensor+product">tensor product</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">N = 2</annotation></semantics></math> super-<a class="existingWikiWord" href="/nlab/show/minimal+model+CFT">minimal model CFT</a>.</p>
 
-<p>As such the Gepner model is directly analogous to the purely algebraically defined non-classical fibers in the <a class="existingWikiWord" href="/nlab/show/Connes-Lott-Chamseddine-Barrett+model">Connes-Lott-Chamseddine-Barrett model</a> (it is a “<a class="existingWikiWord" href="/nlab/show/2-spectral+triple">2-spectral triple</a>”-analog of the <a class="existingWikiWord" href="/nlab/show/spectral+triples">spectral triples</a> in the Connes-Lott model, see <a href="Connes-Lott-Chamseddine-Barrett+model#Schreiber16">there</a>) and, accordingly, plays a central role in <a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a> (see e.g. <a href="#Reppel07">Reppel 07</a>).</p>
+<p>This means that Gepner models are “non-geometric” in that they do not arise as <a class="existingWikiWord" href="/nlab/show/sigma-models">sigma-models</a> with <a class="existingWikiWord" href="/nlab/show/target+space">target space</a> a <a class="existingWikiWord" href="/nlab/show/smooth+manifold">smooth manifold</a>. Indeed the Gepner models appear as the limiting cases of sigma-models with <a class="existingWikiWord" href="/nlab/show/target+space">target space</a> a 6d <a class="existingWikiWord" href="/nlab/show/Calabi-Yau+manifold">Calabi-Yau manifold</a> at singular points in the <a class="existingWikiWord" href="/nlab/show/moduli+space">moduli space</a> of the CY target: the <em><a class="existingWikiWord" href="/nlab/show/flop+transition">flop transition</a></em>.</p>
 
-<p>By taking <a class="existingWikiWord" href="/nlab/show/tensor+products">tensor products</a> of several copies of the Gepner model, the model is a basic building block for <a class="existingWikiWord" href="/nlab/show/rational+conformal+field+theory">rational conformal field theory</a>.</p>
+<p>As such the Gepner models are directly analogous to the purely algebraically defined non-classical fibers in the <a class="existingWikiWord" href="/nlab/show/Connes-Lott-Chamseddine-Barrett+model">Connes-Lott-Chamseddine-Barrett model</a> (it is a “<a class="existingWikiWord" href="/nlab/show/2-spectral+triple">2-spectral triple</a>”-analog of the <a class="existingWikiWord" href="/nlab/show/spectral+triples">spectral triples</a> in the Connes-Lott model, see <a href="Connes-Lott-Chamseddine-Barrett+model#Schreiber16">there</a>) and, accordingly, plays a central role in <a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a> (for review see e.g. <a href="#Reppel07">Reppel 07</a>).</p>
+
+<p>THe Gepner models,are a basic building block for <a class="existingWikiWord" href="/nlab/show/rational+conformal+field+theory">rational conformal field theory</a>.</p>
 
 <h2 id="properties">Properties</h2>
 
@@ -777,14 +779,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 12:28:01.
+  Last revised on September 29, 2018 at 04:44:44.
   See the <a href="https://ncatlab.org/nlab/history/Gepner model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Gepner+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gepner+model/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Gepner+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gepner+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Gepner+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gepner+model/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Gepner+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gepner+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Gepner model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
