--- a/pages/176.html
+++ b/pages/176.html
@@ -1869,6 +1869,14 @@ G_{ij}(z_1, z_2) = C_{ij} (z_1 - z_2)^{-(h_i + h_j)} (\overline{z_1} - \overline
 </li>
 
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/minimal+model+CFT">minimal model CFT</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Gepner+model">Gepner model</a>, <a class="existingWikiWord" href="/nlab/show/WZW+model">WZW model</a></p>
+</li>
+
+<li>
 <p><a class="existingWikiWord" href="/nlab/show/conformal+net">conformal net</a></p>
 </li>
 
@@ -2060,14 +2068,14 @@ G_{ij}(z_1, z_2) = C_{ij} (z_1 - z_2)^{-(h_i + h_j)} (\overline{z_1} - \overline
 
 <div class="revisedby">
   <p>
-  Last revised on September 27, 2018 at 14:51:35.
+  Last revised on September 29, 2018 at 04:50:39.
   See the <a href="https://ncatlab.org/nlab/history/conformal field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/conformal+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/conformal+field+theory/58" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(58 revisions)</span> | <a href="/nlab/show/diff/conformal+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/conformal+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/conformal+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/conformal+field+theory/59" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(59 revisions)</span> | <a href="/nlab/show/diff/conformal+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/conformal+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/conformal field theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
