--- a/pages/6713.html
+++ b/pages/6713.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8432/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8432/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1029,6 +1029,18 @@ margin-left: 0em;
 
 <p>See also at <em><a class="existingWikiWord" href="/nlab/show/anti-D-brane">anti-D-brane</a></em>.</p>
 
+<p>But actual checks of the proposal that D-brane charge is given by K-theory, via concrete computation in <a class="existingWikiWord" href="/nlab/show/boundary+conformal+field+theory">boundary conformal field theory</a>, have revealed some subtleties:</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Stefan+Fredenhagen">Stefan Fredenhagen</a>, <span class="newWikiWord">Thomas Quella<a href="/nlab/new/Thomas+Quella">?</a></span>, <em>Generalised permutation branes</em>, JHEP0511:004, 2005 (<a href="https://arxiv.org/abs/hep-th/0509153">arXiv:hep-th/0509153</a>)</p>
+
+<blockquote>
+<p>It might surprise that despite all the progress that has been made in understanding branes on group manifolds, there are usually not enough D-branes known to explain the whole charge group predicted by (twisted) K-theory.</p>
+</blockquote>
+</li>
+</ul>
+
 <p>Further review and discussion of D-brane charge in K-theory includes the following</p>
 
 <ul>
@@ -1218,14 +1230,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 10:13:11.
+  Last revised on September 29, 2018 at 04:59:11.
   See the <a href="https://ncatlab.org/nlab/history/D-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D-brane/58" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(58 revisions)</span> | <a href="/nlab/show/diff/D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D-brane/59" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(59 revisions)</span> | <a href="/nlab/show/diff/D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/D-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
