--- a/pages/10356.html
+++ b/pages/10356.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1097,7 +1097,7 @@ margin-left: 0em;
 <li id="GSV83"><a class="existingWikiWord" href="/nlab/show/G%C3%A9rard+Gonzalez-Sprinberg">Gérard Gonzalez-Sprinberg</a>, <a class="existingWikiWord" href="/nlab/show/Jean-Louis+Verdier">Jean-Louis Verdier</a>, Construction géométrique de la correspondance de McKay, Ann. Sci. ́École Norm. Sup.16 (1983) 409–449. (<a href="http://www.numdam.org/item?id=ASENS_1983_4_16_3_409_0">numdam</a>)</li>
 </ul>
 
-<p>Detailed mathematical discussion of fractional D-branes in their incarnation as charges in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi><mo stretchy="false">(</mo><mover><mi>X</mi><mo stretchy="false">˜</mo></mover><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">K(\tilde X)</annotation></semantics></math> is in</p>
+<p>Detailed mathematical discussion of fractional D-branes in their incarnation as <a class="existingWikiWord" href="/nlab/show/Ext">Ext</a>-groups of <a class="existingWikiWord" href="/nlab/show/coherent+sheaves">coherent sheaves</a> is in</p>
 
 <ul>
 <li>S. Katz, <a class="existingWikiWord" href="/nlab/show/Tony+Pantev">Tony Pantev</a>, <a class="existingWikiWord" href="/nlab/show/Eric+Sharpe">Eric Sharpe</a>, <em>D-branes, orbifolds, and Ext groups</em>, Nucl.Phys. B673 (2003) 263-300 (<a href="https://arxiv.org/abs/hep-th/0212218">arXiv:hep-th/0212218</a>)</li>
@@ -1137,7 +1137,13 @@ margin-left: 0em;
 <li id="MMR06">
 <p>Jaydeep Majumder, Subir Mukhopadhyay, Koushik Ray, <em>Fractional Branes in Non-compact Type IIA Orientifolds</em>, JHEP0611:008, 2006 (<a href="https://arxiv.org/abs/hep-th/0602135">arXiv:hep-th/0602135</a>)</p>
 </li>
+
+<li id="KrizZayasQuiroz08">
+<p><a class="existingWikiWord" href="/nlab/show/Igor+Kriz">Igor Kriz</a>, Leopoldo A. Pando Zayas, Norma Quiroz, <em>Comments on D-branes on Orbifolds and K-theory</em>, Int.J.Mod.Phys.A23:933-974, 2008 (<a href="https://arxiv.org/abs/hep-th/0703122">arXiv:hep-th/0703122</a>)</p>
+</li>
 </ul>
+
+<p>spring</p>
 
 <h3 id="relation_to_permutation_branes">Relation to permutation branes</h3>
 
@@ -1152,14 +1158,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 29, 2018 at 05:49:38.
+  Last revised on September 29, 2018 at 06:48:58.
   See the <a href="https://ncatlab.org/nlab/history/fractional D-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fractional+D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fractional+D-brane/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/fractional+D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fractional+D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/fractional+D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fractional+D-brane/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/fractional+D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fractional+D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/fractional D-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
