--- a/pages/19727.html
+++ b/pages/19727.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1103,7 +1103,13 @@ margin-left: 0em;
 <p>This has been checked in examples in</p>
 
 <ul>
-<li id="BraunSchaeferNameki05"><a class="existingWikiWord" href="/nlab/show/Volker+Braun">Volker Braun</a>, Sakura Schafer-Nameki, <em>D-Brane Charges in Gepner Models</em>, J.Math.Phys. 47 (2006) 092304 (<a href="https://arxiv.org/abs/hep-th/0511100">arXiv:hep-th/0511100</a>)</li>
+<li id="BraunSchaeferNameki05">
+<p><a class="existingWikiWord" href="/nlab/show/Volker+Braun">Volker Braun</a>, Sakura Schafer-Nameki, <em>D-Brane Charges in Gepner Models</em>, J.Math.Phys. 47 (2006) 092304 (<a href="https://arxiv.org/abs/hep-th/0511100">arXiv:hep-th/0511100</a>)</p>
+</li>
+
+<li id="KrizZayasQuiroz08">
+<p><a class="existingWikiWord" href="/nlab/show/Igor+Kriz">Igor Kriz</a>, Leopoldo A. Pando Zayas, Norma Quiroz, <em>Comments on D-branes on Orbifolds and K-theory</em>, Int.J.Mod.Phys.A23:933-974, 2008 (<a href="https://arxiv.org/abs/hep-th/0703122">arXiv:hep-th/0703122</a>)</p>
+</li>
 </ul>
 
 <p>A mismatch was claimed in</p>
@@ -1169,14 +1175,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 11:53:39.
+  Last revised on September 29, 2018 at 06:51:31.
   See the <a href="https://ncatlab.org/nlab/history/boundary conformal field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/boundary+conformal+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/boundary+conformal+field+theory/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/boundary+conformal+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/boundary+conformal+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/boundary+conformal+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/boundary+conformal+field+theory/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/boundary+conformal+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/boundary+conformal+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/boundary conformal field theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
