--- a/pages/6713.html
+++ b/pages/6713.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1033,7 +1033,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Stefan+Fredenhagen">Stefan Fredenhagen</a>, <span class="newWikiWord">Thomas Quella<a href="/nlab/new/Thomas+Quella">?</a></span>, <em>Generalised permutation branes</em>, JHEP0511:004, 2005 (<a href="https://arxiv.org/abs/hep-th/0509153">arXiv:hep-th/0509153</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Stefan+Fredenhagen">Stefan Fredenhagen</a>, <a class="existingWikiWord" href="/nlab/show/Thomas+Quella">Thomas Quella</a>, <em>Generalised permutation branes</em>, JHEP0511:004, 2005 (<a href="https://arxiv.org/abs/hep-th/0509153">arXiv:hep-th/0509153</a>)</p>
 
 <blockquote>
 <p>It might surprise that despite all the progress that has been made in understanding branes on group manifolds, there are usually not enough D-branes known to explain the whole charge group predicted by (twisted) K-theory.</p>
@@ -1050,6 +1050,10 @@ margin-left: 0em;
 
 <li>
 <p>Kasper Olsen, <a class="existingWikiWord" href="/nlab/show/Richard+Szabo">Richard Szabo</a>, <em>Constructing D-Branes from K-Theory</em>, Adv.Theor.Math.Phys. 3 (1999) 889-1025 (<a href="https://arxiv.org/abs/hep-th/9907140">arXiv:hep-th/9907140</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/John+Schwarz">John Schwarz</a>, <em>TASI Lectures on Non-BPS D-Brane Systems</em> (<a href="https://arxiv.org/abs/hep-th/9908144">arXiv:hep-th/9908144</a>)</p>
 </li>
 
 <li id="Witten00">
@@ -1145,6 +1149,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p>M. R. Gaberdiel, B. Stefanski Jr, <em>Dirichlet Branes on Orbifolds</em>, Nucl.Phys.B578:58-84, 2000 (<a href="https://arxiv.org/abs/hep-th/9910109">arXiv:hep-th/9910109</a>)</p>
+</li>
+
+<li>
 <p><a class="existingWikiWord" href="/nlab/show/Igor+Kriz">Igor Kriz</a>, Leopoldo A. Pando Zayas, Norma Quiroz, <em>Comments on D-branes on Orbifolds and K-theory</em>, Int.J.Mod.Phys.A23:933-974, 2008 (<a href="https://arxiv.org/abs/hep-th/0703122">arXiv:hep-th/0703122</a>)</p>
 </li>
 
@@ -1230,14 +1238,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 29, 2018 at 04:59:11.
+  Last revised on September 29, 2018 at 07:53:12.
   See the <a href="https://ncatlab.org/nlab/history/D-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D-brane/59" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(59 revisions)</span> | <a href="/nlab/show/diff/D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D-brane/61" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(61 revisions)</span> | <a href="/nlab/show/diff/D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/D-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
