--- a/pages/19734.html
+++ b/pages/19734.html
@@ -364,14 +364,14 @@ margin-left: 0em;
 </div>
 </p>
 <h2 id="section_References">References</h2>
-<p>Henry J. Ricaro, <em>Goldbach’s conjecture implies Bertrand’s postulate, Amer. Math. Monthly, 112, pg.492</em></p>
+<p>Henry J. Ricardo, <em>Goldbach’s conjecture implies Bertrand’s postulate, Amer. Math. Monthly, 112, pg. 492, 2005</em></p>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Created on September 29, 2018 at 09:50:46.
+  Created on September 29, 2018 at 10:04:03.
   See the <a href="https://ncatlab.org/nlab/history/Bertrand&#39;s postulate" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
