--- a/pages/17973.html
+++ b/pages/17973.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1102,8 +1102,8 @@ margin-left: 0em;
 <p>Discussion of the <a class="existingWikiWord" href="/nlab/show/cosmology">cosmology</a> of intersecting brane models includes (see also at <em><a class="existingWikiWord" href="/nlab/show/Randall-Sundrum+model">Randall-Sundrum model</a></em>)</p>
 
 <ul>
-<li id="Uranga02">
-<p><a class="existingWikiWord" href="/nlab/show/Angel+Uranga">Angel Uranga</a>, section 18 of <em>TASI lectures on String Compactification, Model Building, and Fluxes</em> (<a href="https://arxiv.org/abs/hep-th/0201209">arXiv:hep-th/0201209</a>)</p>
+<li id="Uranga05">
+<p><a class="existingWikiWord" href="/nlab/show/Angel+Uranga">Angel Uranga</a>, section 18 of <em>TASI lectures on String Compactification, Model Building, and Fluxes</em>, 2005 (<a href="http://cds.cern.ch/record/933469/files/cer-002601054.pdf">pdf</a>)</p>
 </li>
 
 <li id="Kaloper04">
@@ -1124,14 +1124,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 07:25:24.
+  Last revised on September 29, 2018 at 13:44:41.
   See the <a href="https://ncatlab.org/nlab/history/intersecting D-brane model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/intersecting+D-brane+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/intersecting+D-brane+model/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/intersecting+D-brane+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/intersecting+D-brane+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/intersecting+D-brane+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/intersecting+D-brane+model/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/intersecting+D-brane+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/intersecting+D-brane+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/intersecting D-brane model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
