--- a/pages/8439.html
+++ b/pages/8439.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -841,7 +841,7 @@ add/s : {M:nat}{N:nat}{P:nat} add M N P -&gt; add (s M) N (s P).</code></pre>
 
 <p>General overviews include:</p>
 
-<ul id="Harper">
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Frank+Pfenning">Frank Pfenning</a>, <em>Logical frameworks – a brief introduction</em> (<a href="http://www.cs.cmu.edu/~fp/papers/mdorf01.pdf">pdf</a>)</p>
 </li>
@@ -862,7 +862,7 @@ add/s : {M:nat}{N:nat}{P:nat} add M N P -&gt; add (s M) N (s P).</code></pre>
 <p><a class="existingWikiWord" href="/nlab/show/UF-IAS-2012">UF-IAS-2012</a>, <em><a href="http://uf-ias-2012.wikispaces.com/Logical+Frameworks">Logical frameworks</a></em>.</p>
 </li>
 
-<li>
+<li id="Harper">
 <p><a class="existingWikiWord" href="/nlab/show/Robert+Harper">Robert Harper</a>, <em><a href="http://www.cs.cmu.edu/~rwh/papers/lfias/lf.pdf">Notes on logical frameworks</a></em></p>
 </li>
 </ul>
@@ -888,14 +888,14 @@ add/s : {M:nat}{N:nat}{P:nat} add M N P -&gt; add (s M) N (s P).</code></pre>
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 15:09:26.
+  Last revised on September 29, 2018 at 20:44:15.
   See the <a href="https://ncatlab.org/nlab/history/logical framework" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/logical+framework" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/logical+framework/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/logical+framework" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/logical+framework" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/logical+framework" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/logical+framework/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/logical+framework" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/logical+framework" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/logical framework/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
