--- a/pages/289.html
+++ b/pages/289.html
@@ -363,7 +363,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>John Baez, Alexander Hoffnung, <em>Higher-dimensional algebra VIII: The Hecke Bicategory</em>, (<a href="http://math.ucr.edu/home/baez/hda8.pdf">pdf</a>)</p>
+<p>John Baez, Alexander Hoffnung, <em>Higher-dimensional algebra VIII: The Hecke Bicategory</em>, (<a href="http://math.ucr.edu/home/baez/hecke.pdf">pdf</a>)</p>
 </li>
 
 <li>
@@ -410,14 +410,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 29, 2018 at 17:10:21.
+  Last revised on September 30, 2018 at 01:52:03.
   See the <a href="https://ncatlab.org/nlab/history/groupoidification" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/groupoidification" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/groupoidification/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/groupoidification" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/groupoidification" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/groupoidification" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/groupoidification/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/groupoidification" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/groupoidification" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/groupoidification/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
