--- a/pages/5806.html
+++ b/pages/5806.html
@@ -528,13 +528,32 @@ margin-left: 0em;
 
 <li><a class="existingWikiWord" href="/nlab/show/enriched+category+theory">enriched category theory</a></li>
 </ul><div>
-<p><a href="/nlab/edit/higher+category+theory+-+contents">Edit this sidebar</a></p>
+<p>
+  <a href="/nlab/edit/higher+category+theory+-+contents">Edit this sidebar</a>
+</p>
 </div></div>
 </div>
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#Definition">Definition</a><ul><li><a href="#direct_definition">Direct definition</a></li><li><a href="#DefinitionViaCoalgebras">Definition via coalgebras</a></li><li><a href="#PhasedTensorProduct">With the phased tensor product</a></li></ul></li><li><a href="#Properties">Properties</a><ul><li><a href="#FullDualizability">Full dualizability</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#Definition'>Definition</a></li>
+<ul>
+<li><a href='#direct_definition'>Direct definition</a></li>
+<li><a href='#DefinitionViaCoalgebras'>Definition via coalgebras</a></li>
+<li><a href='#PhasedTensorProduct'>With the phased tensor product</a></li>
+</ul>
+<li><a href='#Properties'>Properties</a></li>
+<ul>
+<li><a href='#FullDualizability'>Full dualizability</a></li>
+</ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>The generalization of the <a class="existingWikiWord" href="/nlab/show/bicategory">bicategory</a> <em><a class="existingWikiWord" href="/nlab/show/Span">Span</a></em> to <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2Cn%29-categories">(∞,n)-categories</a>:</p>
@@ -843,10 +862,16 @@ margin-left: 0em;
 
 <p>there denoted <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Fam</mi> <mi>n</mi></msub><mo stretchy="false">(</mo><mi>C</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Fam_n(C)</annotation></semantics></math>. Notice the heuristic discussion on page 59.</p>
 
-<p>A detailed version of this definition is given in</p>
+<p>More detailed discussion is given in</p>
 
 <ul>
-<li id="Haugseng14"><a class="existingWikiWord" href="/nlab/show/Rune+Haugseng">Rune Haugseng</a>, <em>Iterated spans and “classical” topological field theories</em> (<a href="http://arxiv.org/abs/1409.0837">arXiv:1409.0837</a>)</li>
+<li id="Haugseng14">
+<p><a class="existingWikiWord" href="/nlab/show/Rune+Haugseng">Rune Haugseng</a>, <em>Iterated spans and “classical” topological field theories</em> (<a href="http://arxiv.org/abs/1409.0837">arXiv:1409.0837</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Yonatan+Harpaz">Yonatan Harpaz</a>, <em>Ambidexterity and the universality of finite spans</em> (<a href="https://arxiv.org/abs/1703.09764">arXiv:1703.09764</a>)</p>
+</li>
 </ul>
 
 <p>Both articles comment on the relation to <a class="existingWikiWord" href="/schreiber/show/Local+prequantum+field+theory">Local prequantum field theory</a>.</p>
@@ -894,14 +919,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 16, 2018 at 03:31:27.
+  Last revised on September 30, 2018 at 05:31:33.
   See the <a href="https://ncatlab.org/nlab/history/(infinity,n)-category of correspondences" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/%28infinity%2Cn%29-category+of+correspondences" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/%28infinity%2Cn%29-category+of+correspondences/31" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(31 revisions)</span> | <a href="/nlab/show/diff/%28infinity%2Cn%29-category+of+correspondences" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/%28infinity%2Cn%29-category+of+correspondences" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/%28infinity%2Cn%29-category+of+correspondences" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/%28infinity%2Cn%29-category+of+correspondences/32" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(32 revisions)</span> | <a href="/nlab/show/diff/%28infinity%2Cn%29-category+of+correspondences" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/%28infinity%2Cn%29-category+of+correspondences" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/(infinity,n)-category of correspondences/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
