--- a/pages/6489.html
+++ b/pages/6489.html
@@ -676,8 +676,8 @@ margin-left: 0em;
 <li><a href='#related_prebridgeland_work'>Related pre-Bridgeland work</a></li>
 <li><a href='#general'>General</a></li>
 <li><a href='#introductions_and_lectures'>Introductions and lectures</a></li>
+<li><a href='#examples_2'>Examples</a></li>
 <li><a href='#relation_to_stable_branes_in_string_theory'>Relation to stable branes in string theory</a></li>
-<li><a href='#relation_to_moduli_space_theory'>Relation to moduli space theory</a></li>
 </ul>
 </ul>
 </div>
@@ -705,7 +705,9 @@ margin-left: 0em;
 
 <h2 id="definition">Definition</h2>
 
-<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding="application/x-tex">\mathcal{A}</annotation></semantics></math> be an <a class="existingWikiWord" href="/nlab/show/abelian+category">abelian category</a> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi><mo stretchy="false">(</mo><mi>𝒜</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">K(\mathcal{A})</annotation></semantics></math> be its <a class="existingWikiWord" href="/nlab/show/Grothendieck+group">Grothendieck group</a>. A <strong>stability function</strong>, sometimes also called a <em>central charge</em>, is a <a class="existingWikiWord" href="/nlab/show/linear+map">linear map</a></p>
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding="application/x-tex">\mathcal{A}</annotation></semantics></math> be an <a class="existingWikiWord" href="/nlab/show/abelian+category">abelian category</a> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi><mo stretchy="false">(</mo><mi>𝒜</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">K(\mathcal{A})</annotation></semantics></math> be its <a class="existingWikiWord" href="/nlab/show/Grothendieck+group">Grothendieck group</a>.</p>
+
+<p>A <strong>stability function</strong>, sometimes also called a <em>central charge</em>, is a <a class="existingWikiWord" href="/nlab/show/linear+map">linear map</a></p>
 <div class="maruku-equation" id="eq:StabilityFunction"><span class="maruku-eq-number">(1)</span><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Z</mi><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>K</mi><mo stretchy="false">(</mo><mi>𝒜</mi><mo stretchy="false">)</mo><mo>⟶</mo><mi>ℂ</mi></mrow><annotation encoding="application/x-tex">
   
   Z 
@@ -844,14 +846,34 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Daniel+Huybrechts">Daniel Huybrechts</a>, <em>Introduction to stability conditions</em> (<a href="https://arxiv.org/abs/1111.1745">arXiv:1111.1745</a>)</p>
+<p>Arend Bayer, Emaneule Macri, <em>Projectivity and Birational Geometry of Bridgeland Moduli Spaces</em> (<a href="http://arxiv.org/abs/1203.4613">arXiv:1203.4613</a>)</p>
 </li>
 </ul>
 
 <h3 id="introductions_and_lectures">Introductions and lectures</h3>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Anton+Geraschenko">Anton Geraschenko</a>, <em>notes from an introductory talk</em> (<a href="http://math.berkeley.edu/~anton/written/AspectsModuli/AspectsModuli.pdf">pdf</a>)</li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Anton+Geraschenko">Anton Geraschenko</a>, <em>notes from an introductory talk</em> (<a href="http://math.berkeley.edu/~anton/written/AspectsModuli/AspectsModuli.pdf">pdf</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Daniel+Huybrechts">Daniel Huybrechts</a>, <em>Introduction to stability conditions</em> (<a href="https://arxiv.org/abs/1111.1745">arXiv:1111.1745</a>)</p>
+</li>
+</ul>
+
+<h3 id="examples_2">Examples</h3>
+
+<p>Discussion of stability conditions over <span class="newWikiWord">Dynkin quivers<a href="/nlab/new/Dynkin+quivers">?</a></span> includes</p>
+
+<ul>
+<li id="Qiu15">
+<p><span class="newWikiWord">Yu Qiu<a href="/nlab/new/Yu+Qiu">?</a></span>, Def. 2.1 <em>Stability conditions and quantum dilogarithm identities for Dynkin quivers</em>, Adv. Math., 269 (2015), pp 220-264 (<a href="https://arxiv.org/abs/1111.1010">arXiv:1111.1010</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Tom+Bridgeland">Tom Bridgeland</a>, <span class="newWikiWord">Yu Qiu<a href="/nlab/new/Yu+Qiu">?</a></span>, <span class="newWikiWord">Tom Sutherland<a href="/nlab/new/Tom+Sutherland">?</a></span>, <em>Stability conditions and the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>A</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">A_2</annotation></semantics></math> quiver</em> (<a href="https://arxiv.org/abs/1406.2566">arXiv:1406.2566</a>)</p>
+</li>
 </ul>
 
 <h3 id="relation_to_stable_branes_in_string_theory">Relation to stable branes in string theory</h3>
@@ -867,26 +889,20 @@ margin-left: 0em;
 <p>Dmitry Malyshev, <a class="existingWikiWord" href="/nlab/show/Herman+Verlinde">Herman Verlinde</a>, <em>D-branes at Singularities and String Phenomenology</em>, Nucl.Phys.Proc.Suppl.171:139-163, 2007 (<a href="https://arxiv.org/abs/0711.2451">arXiv:0711.2451</a>)</p>
 </li>
 </ul>
-
-<h3 id="relation_to_moduli_space_theory">Relation to moduli space theory</h3>
-
-<ul>
-<li>Arend Bayer, Emaneule Macri, <em>Projectivity and Birational Geometry of Bridgeland Moduli Spaces</em> (<a href="http://arxiv.org/abs/1203.4613">arXiv:1203.4613</a>)</li>
-</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 29, 2018 at 10:57:42.
+  Last revised on September 30, 2018 at 06:15:16.
   See the <a href="https://ncatlab.org/nlab/history/Bridgeland stability condition" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bridgeland+stability+condition" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bridgeland+stability+condition/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/Bridgeland+stability+condition" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bridgeland+stability+condition" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Bridgeland+stability+condition" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bridgeland+stability+condition/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/Bridgeland+stability+condition" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bridgeland+stability+condition" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Bridgeland stability condition/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
