--- a/pages/11679.html
+++ b/pages/11679.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -910,6 +910,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/stable+vector+bundle">stable vector bundle</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Bridgeland+stability+condition">Bridgeland stability condition</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -935,14 +939,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 29, 2018 at 11:20:32.
+  Last revised on September 30, 2018 at 08:37:45.
   See the <a href="https://ncatlab.org/nlab/history/slope of a coherent sheaf" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/slope+of+a+coherent+sheaf" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/slope+of+a+coherent+sheaf/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/slope+of+a+coherent+sheaf" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/slope+of+a+coherent+sheaf" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/slope+of+a+coherent+sheaf" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/slope+of+a+coherent+sheaf/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/slope+of+a+coherent+sheaf" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/slope+of+a+coherent+sheaf" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/slope of a coherent sheaf/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
