--- a/pages/19737.html
+++ b/pages/19737.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      resolution of singularities in nLab
+      Yu Qiu in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      resolution of singularities
+      Yu Qiu
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9075/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,77 +309,45 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>related Lab entries</title></head>
 <body>
-<blockquote>
-<p>under construction</p>
-</blockquote>
-
-<h1 id="contents">Contents</h1>
-<div class='maruku_toc'>
 <ul>
-<li><a href='#idea'>Idea</a></li>
-<li><a href='#examples'>Examples</a></li>
-<li><a href='#related_concept'>Related concept</a></li>
-<li><a href='#references'>References</a></li>
-</ul>
-</div>
-
-<h2 id="idea">Idea</h2>
-
-<p>…resolution of <a class="existingWikiWord" href="/nlab/show/singularities">singularities</a>…</p>
-
-<h2 id="examples">Examples</h2>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/Bridgeland+stability">Bridgeland stability</a> over resolution of <a class="existingWikiWord" href="/nlab/show/ADE-singularities">ADE-singularities</a>: see <a href="Bridgeland+stability+condition#OverResolutionsOfADESingularities">there</a></li>
+<li><a href="https://www.math.cuhk.edu.hk/people/academic-staff/yqiu">webpage</a></li>
 </ul>
 
-<h2 id="related_concept">Related concept</h2>
+<h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/ADE+singularity">ADE singularity</a></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/M-theory+lift+of+gauge+enhancement+on+D6-branes">M-theory lift of gauge enhancement on D6-branes</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Bridgeland+stability+condition">Bridgeland stability condition</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/triple+membrane+junction">triple membrane junction</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Dynkin+quiver">Dynkin quiver</a></p>
 </li>
 </ul>
-</li>
-</ul>
-
-<h2 id="references">References</h2>
-
-<ul>
-<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Resolution_of_singularities">Resolution of singularities</a></em></li>
-</ul>
-</body></html>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 30, 2018 at 08:54:59.
-  See the <a href="https://ncatlab.org/nlab/history/resolution of singularities" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on September 30, 2018 at 08:02:07.
+  See the <a href="https://ncatlab.org/nlab/history/Yu Qiu" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/resolution+of+singularities" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/resolution+of+singularities/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/resolution+of+singularities" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/resolution+of+singularities" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/resolution of singularities/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Yu+Qiu" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Yu Qiu/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/resolution+of+singularities" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Yu+Qiu" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/resolution+of+singularities" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Yu+Qiu" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/resolution+of+singularities" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Yu+Qiu" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
